--- a/index.html
+++ b/index.html
@@ -144,10 +144,12 @@
       .realtime { max-height: 350px; height: 350px; }
       .realtime-inner { height: 350px; }
       .realtime table { width: 100%; }
-      .realtime thead, .realtime tbody { display: block; width: 100%; }
-      .realtime thead tr { display: table-row; }
-      .realtime tbody.realtime-table-body { display: block; width: 100%; }
-      .realtime tr { display: table; table-layout: fixed; width: 100%; }
+      .realtime thead, .realtime tbody {
+        display: table;
+        table-layout: fixed;
+        width: 100%;
+      }
+      .realtime tr { display: table-row; }
       .realtime th, .realtime td {
         display: table-cell;
         padding: 4px 2px !important;
@@ -479,8 +481,14 @@
           tbody.innerHTML = '<tr><td colspan="4">데이터 없음</td></tr>';
           return;
         }
+        // 날짜 기준 정렬 한 번 더(혹시라도 Airtable쪽에 잘못 저장된 값 있을 때 대비)
+        const sortedRecords = data.records.slice().sort((a, b) => {
+          const tA = new Date(a.fields["접수일자"] || 0).getTime();
+          const tB = new Date(b.fields["접수일자"] || 0).getTime();
+          return tB - tA; // 최신순
+        });
         // 2배 복제(무한스크롤)
-        const limitedRecords = data.records.slice(0, 50);
+        const limitedRecords = sortedRecords.slice(0, 50);
         const allRecords = [...limitedRecords, ...limitedRecords];
         allRecords.forEach((record, idx) => {
           const row = record.fields;
@@ -490,7 +498,7 @@
           if (time.length >= 10) { time = time.slice(0, 10); }
           const name = maskName(row["고객명"] || "");
 
-          // 상품 출력: 한 줄씩
+          // 상품 출력: 한 줄씩(div로 줄바꿈)
           const carrier = (row["통신사"] || "").trim();
           const product = (row["상품"] || "").trim();
           const tvExtra = (row["TV추가"] || "").trim();
@@ -502,7 +510,6 @@
           if (tvExtra) productItems.push(tvExtra);
           if (addons.length) productItems = productItems.concat(addons);
 
-          // **여기서 <br>로 줄바꿈**
           const productDisplay = productItems.map(item => `<div>${item}</div>`).join('');
 
           const statusDisplay = isAdmin
