--- a/index.html
+++ b/index.html
@@ -142,23 +142,22 @@
       .review-section { border-width: 0 !important; }
       .realtime-section { border-width: 2px !important; }
       .realtime { max-height: 350px; height: 350px; }
-      .realtime-inner { height: 350px; }
-      .realtime table { width: 100%; }
-      .realtime thead, .realtime tbody {
-        display: table;
-        table-layout: fixed;
-        width: 100%;
-      }
-      .realtime tr { display: table-row; }
+      .realtime-inner { height: 350px; overflow-x: auto; }
+      .realtime table { width: 600px; min-width:600px; }
+      .realtime thead, .realtime tbody { display: block; width: 100%; }
+      .realtime thead tr { display: table; table-layout: fixed; width: 100%; }
+      .realtime tbody.realtime-table-body { display: block; width: 100%; }
+      .realtime tr { display: table; table-layout: fixed; width: 100%; }
       .realtime th, .realtime td {
         display: table-cell;
         padding: 4px 2px !important;
         height: 18px !important;
         font-size: 15px !important;
         width: 25% !important;
+        min-width: 140px !important;
         box-sizing: border-box;
       }
-      .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40% !important; }
+      .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40% !important; min-width:200px !important;}
       .admin-cell span { font-size: 6.5px !important; }
       .admin-cell { font-size: 12px !important; padding: 4px 2px !important; }
       .admin-select { font-size: 12px !important; }
@@ -481,14 +480,8 @@
           tbody.innerHTML = '<tr><td colspan="4">데이터 없음</td></tr>';
           return;
         }
-        // 날짜 기준 정렬 한 번 더(혹시라도 Airtable쪽에 잘못 저장된 값 있을 때 대비)
-        const sortedRecords = data.records.slice().sort((a, b) => {
-          const tA = new Date(a.fields["접수일자"] || 0).getTime();
-          const tB = new Date(b.fields["접수일자"] || 0).getTime();
-          return tB - tA; // 최신순
-        });
         // 2배 복제(무한스크롤)
-        const limitedRecords = sortedRecords.slice(0, 50);
+        const limitedRecords = data.records.slice(0, 50);
         const allRecords = [...limitedRecords, ...limitedRecords];
         allRecords.forEach((record, idx) => {
           const row = record.fields;
@@ -497,21 +490,18 @@
           let time = row["접수일자"] || "";
           if (time.length >= 10) { time = time.slice(0, 10); }
           const name = maskName(row["고객명"] || "");
-
-          // 상품 출력: 한 줄씩(div로 줄바꿈)
+          // 상품 출력: 한 줄씩
           const carrier = (row["통신사"] || "").trim();
           const product = (row["상품"] || "").trim();
           const tvExtra = (row["TV추가"] || "").trim();
           const addons = (row["부가상품"] || "").split(',').map(s => s.trim()).filter(Boolean);
-
           let productItems = [];
           if (carrier) productItems.push(carrier);
           if (product) productItems.push(product);
           if (tvExtra) productItems.push(tvExtra);
           if (addons.length) productItems = productItems.concat(addons);
-
+          // **여기서 <br>로 줄바꿈**
           const productDisplay = productItems.map(item => `<div>${item}</div>`).join('');
-
           const statusDisplay = isAdmin
             ? `<select class="admin-select" data-id="${id}">` +
                 ["상담예약","상담중","설치예약","입금완료"].map(opt =>
@@ -519,7 +509,6 @@
                 ).join("") +
               `</select>`
             : `<span class="${statusClass(status)}">${statusIcon(status)} ${status}</span>`;
-
           const tr = document.createElement("tr");
           tr.innerHTML = `
             <td>${time}</td>
