--- a/index.html
+++ b/index.html
@@ -138,27 +138,27 @@
     @media (max-width: 900px) {
       .banner img { height: 130px; }
     }
+
+    /* ----------- 모바일 only 테이블 구조 ------------ */
     @media (max-width: 600px) {
       .review-section { border-width: 0 !important; }
       .realtime-section { border-width: 2px !important; }
       .realtime { max-height: 350px; height: 350px; }
       .realtime-inner { height: 350px; overflow-x: auto; }
-      .realtime table { width: 600px; min-width:600px; }
+      .realtime table { width: 600px; min-width:600px; table-layout: fixed !important; }
       .realtime thead, .realtime tbody { display: block; width: 100%; }
-      .realtime thead tr { display: table; table-layout: fixed; width: 100%; }
-      .realtime tbody.realtime-table-body { display: block; width: 100%; }
-      .realtime tr { display: table; table-layout: fixed; width: 100%; }
+      .realtime thead tr, .realtime tbody tr { display: table; width: 100%; table-layout: fixed; }
       .realtime th, .realtime td {
         display: table-cell;
         padding: 4px 2px !important;
         height: 18px !important;
         font-size: 15px !important;
-        width: 25% !important;
-        min-width: 140px !important;
         box-sizing: border-box;
+        width: 25% !important;
+        min-width: 120px !important;
       }
-      .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40% !important; min-width:200px !important;}
-      .admin-cell span { font-size: 6.5px !important; }
+      .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40% !important; min-width: 180px !important;}
+      .admin-cell span { font-size: 7px !important; }
       .admin-cell { font-size: 12px !important; padding: 4px 2px !important; }
       .admin-select { font-size: 12px !important; }
       .btn-group button { font-size: 14px; padding: 6px; }
@@ -177,6 +177,8 @@
       }
       .review-title, .realtime-section > h2, .form-title { font-size: 25px !important; }
     }
+    /* ----------- 데스크탑(600px 초과)은 기존 구조 유지, 건들지 않음 ------------ */
+
     .realtime-section {
       background-color: #fff;
       border: 3px solid #000;
@@ -458,6 +460,7 @@
     <img src="" alt="Review large view" />
   </div>
   <script>
+    // ... (JS는 동일, 그대로 사용) ...
     const AIRTABLE_TOKEN = "patsLgTBSt5CorHUB.5bb3ba67450d67ac9da759726724d4c3af2d3b8534c9b9aa595a331d382fba3b";
     const AIRTABLE_BASE_ID = "appCRfI2EJrLQJYBL";
     const AIRTABLE_TABLE_NAME = "당일민족1";
