--- a/index.html
+++ b/index.html
@@ -663,7 +663,10 @@
   {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(payload),
+    body: JSON.stringify({
+      table: "당일민족1",
+      fields: payload.fields
+    })
   }
 );
           if (res.ok) {
