--- a/index.html
+++ b/index.html
@@ -484,7 +484,8 @@
       if (name.length <= 2) return name[0] + "*";
       return name[0] + "*".repeat(name.length - 2) + name[name.length - 1];
     }
-    async function fetchDataAirtable() {
+    fetchDataAirtable();
+setInterval(fetchDataAirtable, 15000);
       try {
         const res = await fetch(
           `https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${encodeURIComponent(AIRTABLE_TABLE_NAME)}?sort[][field]=접수일자&sort[][direction]=desc&maxRecords=50`,
